<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="pref_pick_up_to_call_title">Smart phone call</string>
    <string name="pref_pick_up_to_call_summary">Put on your ear, and this will automatically dial number on your contacts, dialer or message</string>
    <string name="general_title">General</string>
    <string name="squadzone_title">Modified by</string>
    <string name="squadzone_summary">CyanMobile</string>
    <string name="camera_title">Camera</string>
    <string name="pref_power_prompt_title">Power prompt</string>
    <string name="pref_power_prompt_summary">Change whether there is a prompt after choosing shutdown or reboot</string>
    <string name="pref_silent_prompt_title">Silent toggle</string>
    <string name="pref_silent_prompt_summary">Show Silent toggle in power menu</string>
    <string name="pref_extend_prompt_title">Extended toggle</string>
    <string name="pref_extend_prompt_summary">Show Extended toggle in power menu</string>
    <string name="pref_navbar_prompt_title">Navigation toggle</string>
    <string name="pref_navbar_prompt_summary">Show Navigation toggle in power menu</string>
    <string name="pref_airplane_prompt_title">Airplane toggle</string>
    <string name="pref_airplane_prompt_summary">Show Airplane toggle in power menu</string>
    <string name="pref_profile_prompt_title">Profile toggle</string>
    <string name="pref_profile_prompt_summary">Show Profile toggle in power menu</string>
    <string name="pref_screenshot_prompt_title">Screenshot toggle</string>
    <string name="pref_screenshot_prompt_summary">Show Screenshot toggle in power menu</string>
    <string name="pref_powersaver_prompt_title">Power saver toggle</string>
    <string name="pref_powersaver_prompt_summary">Show Power saver toggle in power menu</string>
    <string name="pref_suspend_prompt_title">Suspend toggle</string>
    <string name="pref_suspend_prompt_summary">Show Suspend toggle in power menu</string>
    <string name="pref_hibernate_prompt_title">Hibernate toggle</string>
    <string name="pref_hibernate_prompt_summary">Show Hibernate toggle in power menu</string>
    <string name="expanded_haptic_feedback_title">Haptic Feedback</string>
    <string name="expanded_haptic_feedback_summary">Enable/Disable haptic feedback.</string>
    <string name="title_music_widget">Music widget</string>
    <string name="summary_music_widget">Enable/Disable Music widget.</string>
    <string name="title_expanded_widget">Notification power widget</string>
    <string name="summary_expanded_widget">choose style expanded views power widget</string>
    <string name="title_bottom_expanded_widget">Move to bottom</string>
    <string name="bottom_expanded_widget_summaryOn">Showing power widget on bottom</string>
    <string name="bottom_expanded_widget_summaryOff">Showing power widget on top</string>
    <string name="title_grid_expanded_widget">Grid layout</string>
    <string name="grid_expanded_widget_summaryOn">Enable showing power widget in grid view</string>
    <string name="grid_expanded_widget_summaryOff">Disable showing power widget in grid view</string>
    <string name="title_tab_expanded_widget">Tab layout</string>
    <string name="tab_expanded_widget_summaryOn">Enable showing power widget in tab view</string>
    <string name="tab_expanded_widget_summaryOff">Disable showing power widget in tab view</string>
    <string name="title_grid_one_expanded_widget">Grid one layout</string>
    <string name="grid_one_expanded_widget_summaryOn">Enable showing power widget in grid one view</string>
    <string name="grid_one_expanded_widget_summaryOff">Disable showing power widget in grid one view</string>
    <string name="title_grid_two_expanded_widget">Grid two layout</string>
    <string name="grid_two_expanded_widget_summaryOn">Enable showing power widget in grid two view</string>
    <string name="grid_two_expanded_widget_summaryOff">Disable showing power widget in grid two view</string>
    <string name="title_grid_three_expanded_widget">Grid three layout</string>
    <string name="grid_three_expanded_widget_summaryOn">Enable showing power widget in grid three view</string>
    <string name="grid_three_expanded_widget_summaryOff">Disable showing power widget in grid three view</string>
    <string name="title_grid_four_expanded_widget">Grid four layout</string>
    <string name="grid_four_expanded_widget_summaryOn">Enable showing power widget in grid four view</string>
    <string name="grid_four_expanded_widget_summaryOff">Disable showing power widget in grid four view</string>
    <string name="grid_title">Grid power widget</string>
    <string name="expanded_title">Expanded stuff</string>
    <string name="widget_title">Power widget stuff</string>
    <string name="title_expanded_hide_onchange">Hide on change</string>
    <string name="summary_expanded_hide_onchange">Hide the notification pulldown after toggling a widget button</string>
    <string name="title_expanded_hide_indicator">Hide indicator</string>
    <string name="summary_expanded_hide_indicator">Hide the notification widgets indicators</string>
    <string name="title_expanded_hide_scrollbar">Hide scrollbar</string>
    <string name="summary_expanded_hide_scrollbar">Hide scrollbar when more than the maximum number of widget buttons are present.</string>
    <string name="expanded_color_mask">Indicator color</string>
    <string name="call_features_title">Call Features</string>
    <string name="sound_notifications_focus_title">Notification focus</string>
    <string name="sound_notifications_focus_summary">Audio focus requests causes compatible apps to lower the volume while notifications play</string>
    <string name="sound_volume_control_silent_title">Silent state</string>
    <string name="sound_volume_control_silent_summary">Add a state for complete silence to volume control</string>
    <string name="sound_vibrate_in_call_title">Vibrate during calls</string>
    <string name="sound_vibrate_in_call_summary_off">Notifications will not vibrate during a call</string>
    <string name="sound_vibrate_in_call_summary_on">Notifications will vibrate normally</string>
    <string name="sound_lock_volume_keys_title">Lock volume keys</string>
    <string name="sound_lock_volume_keys_summary">Prevents accidental unset of silent mode by pressing volume keys</string>
    <string name="sound_default_volume_media_title">Default volume media</string>
    <string name="sound_default_volume_media_summary">Make volume control default to media instead of ringer</string>
    <string name="sound_volume_key_beeps_title">Volume key beeps</string>
    <string name="sound_volume_key_beeps_summary_off">Do not beep after changing the ringer volume using the volume keys</string>
    <string name="sound_volume_key_beeps_summary_on">Beep after changing the ringer volume using the volume keys</string>
    <string name="sound_ringer_loop_title">Loop ringtone</string>
    <string name="sound_ringer_loop_summary_on">Enable ringtone looping</string>
    <string name="sound_ringer_loop_summary_off">Disable ringtone looping</string>
    <string name="sound_flipping_down_mutes_ringer_title">Flip down to mutes ringer</string>
    <string name="sound_flipping_down_mutes_ringer_summary">No responsibility for being fired!</string>
    <string name="sound_flipping_down_snoozes_alarm_title">Flip down to snoozes alarm</string>
    <string name="sound_flipping_down_snoozes_alarm_summary">No responsibility for being fired!</string>
    <string name="sound_back_button_title">Back button end call</string>
    <string name="sound_back_button_summary_On">Enable back button to end call</string>
    <string name="sound_back_button_summary_Off">Disable back button to end call</string>
    <string name="sound_menu_button_title">Menu button answer call</string>
    <string name="sound_menu_button_summary_On">Enable menu button to answer call</string>
    <string name="sound_menu_button_summary_Off">Disable menu button to answer call</string>
    <string name="sound_incall_ui_title">Allow Incall UI touch</string>
    <string name="sound_incall_ui_summary_On">Enable Incall UI touch</string>
    <string name="sound_incall_ui_summary_Off">Disable Incall UI touch</string>
    <string name="sound_call_me_louder_title">Call Me Louder</string>
    <string name="sound_call_me_louder_summary">Louder ringer when phone is inside bags</string>
    <string name="sound_screenshot_disable_title">Mute screenshot shutter</string>
    <string name="sound_screenshot_disable_summary_on">Screenshot sound will not be played</string>
    <string name="sound_screenshot_disable_summary_off">Screenshot sound will be played</string>
    <string name="sound_camera_shutter_disable_title">Mute camera shutter</string>
    <string name="sound_camera_shutter_disable_summary_on">Shutter sound will not be played</string>
    <string name="sound_camera_shutter_disable_summary_off">Shutter sound will be played</string>
    <string name="sound_camera_focus_mute_title">Mute camera focus</string>
    <string name="sound_camera_focus_mute_summary_on">Focus sound will not be played</string>
    <string name="sound_camera_focus_mute_summary_off">Focus sound will be played</string>
    <string name="sound_to_speaker_title">Play both in speaker and headset</string>
    <string name="sound_notifications_title">Notifications</string>
    <string name="sound_rings_title">Ring tones</string>
    <string name="sound_alarms_title">Alarms</string>
    <string name="sound_fm_title">FM</string>
    <string name="sound_headset_title">Headset</string>
    <string name="sound_speaker_title">Speaker</string>
    <string name="sound_note_title">Note</string>
    <string name="sound_note_summary">The settings below apply only when headphones are used.</string>
    <string name="sound_attenuation_title">Attenuation of set volume</string>
    <string name="sound_limitvol_title">Volume if music is playing</string>
    <string name="sound_notifications_attenuation_dialog">Notification attenuation</string>
    <string name="sound_rings_attenuation_dialog">Ring tone attenuation</string>
    <string name="sound_alarms_attenuation_dialog">Alarm attenuation</string>
    <string name="sound_fm_attenuation_dialog">FM attenuation</string>
    <string name="sound_headset_attenuation_dialog">Headset attenuation</string>
    <string name="sound_speaker_attenuation_dialog">Speaker attenuation</string>
    <string name="sound_notifications_limitvol_dialog">Notification volume</string>
    <string name="sound_rings_limitvol_dialog">Ring tone volume</string>
    <string name="sound_alarms_limitvol_dialog">Alarm volume</string>
    <string name="sound_swap_volume_keys_dialog">Swap volume keys</string>
    <string name="sound_swap_volume_keys_title">Swap volume keys</string>
    <string name="dspmanager_title">DSP Manager</string>
    <string name="dspmanager_summary">Device audio settings</string>
    <string name="weather_enable">Display weather</string>
    <string name="weather_source">Show weather information on the lock screen\n Yahoo! Weather</string>
    <string name="weather_use_custom_location">Use custom location</string>
    <string name="weather_custom_location_dialog_title">Enter location</string>
    <string name="weather_custom_location_hint">City, State/Country</string>
    <string name="weather_custom_location_title">Location</string>
    <string name="weather_show_location_title">Show location</string>
    <string name="weather_show_timestamp_title">Show timestamp</string>
    <string name="weather_refresh_interval">Update interval</string>
    <string name="weather_use_metric">Use metric</string>
    <string name="weather_invert_lowhigh">Invert low/high temperatures</string>
    <string name="gpstracker_title">Query Auto Location</string>
    <string name="gpstracker_summary">An option to Configure and Check Location</string>
</resources>