<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<!-- General settings -->
     	<PreferenceCategory android:key="general_category"
		android:title="@string/general_title">

    <CheckBoxPreference
        android:key="enable_weather"
        android:persistent="false"
        android:title="@string/weather_enable"
        android:summary="@string/weather_source" />

    <ListPreference
        android:key="refresh_interval"
        android:persistent="false"
        android:entries="@array/weather_interval_entries"
        android:entryValues="@array/weather_interval_values"
        android:title="@string/weather_refresh_interval" />

    <CheckBoxPreference
        android:key="use_custom_location"
        android:persistent="false"
        android:title="@string/weather_use_custom_location" />

    <EditTextPreference
        android:key="custom_location"
        android:persistent="false"
        android:dependency="use_custom_location"
        android:dialogTitle="@string/weather_custom_location_dialog_title"
        android:hint="@string/weather_custom_location_hint"
        android:title="@string/weather_custom_location_title" />

    <PreferenceScreen
        android:key="gps_tracker"
        android:title="@string/gpstracker_title"
        android:summary="@string/gpstracker_summary" >
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.gpstracker"
                android:targetClass="com.android.gpstracker.TrackerActivity" />
    </PreferenceScreen>

    <CheckBoxPreference
        android:key="use_metric"
        android:persistent="false"
        android:title="@string/weather_use_metric" />

    <CheckBoxPreference
        android:key="show_location"
        android:persistent="false"
        android:title="@string/weather_show_location_title" />

    <CheckBoxPreference
        android:key="show_timestamp"
        android:persistent="false"
        android:title="@string/weather_show_timestamp_title" />

    <CheckBoxPreference
        android:key="invert_lowhigh"
        android:persistent="false"
        android:title="@string/weather_invert_lowhigh" />

        </PreferenceCategory>
</PreferenceScreen>
